style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    overflow: hidden;
    background-color: rgb(40, 40, 40);  /* #ify42-added background color */
}
.heading{
    background-color: rgb(40, 40, 40);
    color: aliceblue;
    font-size: 40px;
    position: absolute;
    top: 25px;
    font-family: 'Poppins', sans-serif;
    font-weight: 700;
    left: 5%;
    /* display: flex;
    justify-content: center;
    align-items: start;      */
}

table {
    width: 100%;
    height: 70vh; 
    position: absolute; /* ify42-added postion and bottom to fix the table to the bottom */
    bottom: 0;
    background-color: rgb(25, 25, 25);
    color: white;
    font-family: 'Montserrat', sans-serif;
}

td {
    width: 20%; /** width: 25% **/
    text-align: center;
    font-size: 24px;
    background-color: rgb(20, 20, 20);
}

td:hover {
    background-color: rgb(30, 30, 30);
    cursor: pointer;
}

#previousExpression {
  height: 10%;
  background-color: transparent;
  color: grey;
  font-size: 18px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: 2%;
  box-sizing: border-box;
  position: absolute;
  top: 8%;
  width: 100%;
}

#resultArea {
  height: 30vh;
  background-color: rgb(40, 40, 40);
  color: white;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: 4%;
  box-sizing: border-box;
} 

/* added the result css to make it break and reduce - ify47 */
#result {
  font-size: 20px;
  word-wrap: break-word;
  overflow-y: scroll;
  height: 50%;
  
}

#result::-webkit-scrollbar, #previousExpression::-webkit-scrollbar {
display: none;
}

#equalsign {
    background-color: rgb(209, 81, 21);
}

#equalsign:hover {
    background-color:  rgb(196, 106, 67);
}

#clrButton {
  /**height: 10%;**/
  text-align: center;
  font-size: 24px;
  border: none;
  color: white;
}

.operators {
  background-color: rgb(209, 81, 21);
}

.operators:hover {
    background-color:  rgb(196, 106, 67);
}
* {
    box-sizing: border-box;
}
:root {  
    --orange: rgb(209, 81, 21);
    --slate1: rgb(20, 20, 20);
    --slate2: rgb(30, 30, 30);
    --white: #F9F5F6;
    /* --red: #F31559;
    --magenta: #FF52A2;
    --orange: #FFB07F;

    --green: #1A5D1A;
    
    --blue: #78C1F3; */
  }
  
  @keyframes background-pan {
    from {
      background-position: 0% center;
    }
    
    to {
      background-position: -200% center;
    }
  }
  
  @keyframes scale {
    from, to {
      transform: scale(0);
    }
    
    50% {
      transform: scale(1);
    }
  }
  
  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }
    
    to {
      transform: rotate(180deg);
    }
  }
  
  div {
    color: white;
    font-family: "Rubik", sans-serif;
    font-size: clamp(2em, 2vw, 4em);
    font-weight: 400;
  }
  
  div > .magic {
    display: inline-block;
    position: relative;
  }

  div > .magic > .magic-text {
    animation: background-pan 3s linear infinite;
    background: linear-gradient(
      to right,
      var(--orange),
      var(--white),
      /* var(--slate2), */
      var(--white),
      var(--orange)
    );
    background-size: 200%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    white-space: nowrap;
  }

  @media (max-width: 481px) {
table {
  height: 57vh; /* ify42-added height for smaller devices so it can be responsive */
}


/* made scrolling responsive for smaller devices- ify47 */
#result { 
  font-size: 20px;
  word-wrap: break-word;
  overflow: hidden;
}

#resultArea {
  margin-top: 50px;
}

#previousExpression {
  height: 9%;
  display: block;
  word-wrap: break-word;
  overflow: scroll;
  top: 12%;
  direction: rtl;
}
    
  }

